apps/ai-gateway/agentgateway/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agentgateway-proxy
  namespace: agentgateway-system
spec:
  gatewayClassName: agentgateway
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: openai
      port: 8080
      protocol: HTTP
