apps/ai-gateway/agentgateway/resources/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-openai-route
  namespace: agentgateway-system
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: agentgateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1
      backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: litellm-upstream
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kagent-a2a-route
  namespace: agentgateway-system
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: agentgateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/a2a/kagent/finnhub-agent
      # filters:
      #   - type: RBAC
      #     rbac:
      #       allowedPrincipals:
      #         - cluster.local/ns/default/sa/team-lead-sa
      backendRefs:
        - group: ""
          kind: Service
          name: kagent-kagent-controller
          namespace: kagent
          port: 8083
    - matches:
        - path:
            type: PathPrefix
            value: /api/a2a/kagent/team-lead-agent-assist
      # filters:
      #   - type: RBAC
      #     rbac:
      #       allowedPrincipals:
      #         - cluster.local/ns/default/sa/team-lead-sa
      backendRefs:
        - group: ""
          kind: Service
          name: kagent-kagent-controller
          namespace: kagent
          port: 8083
